<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference
        android:defaultValue="English"
        android:entries="@array/pref_language_title"
        android:entryValues="@array/pref_language_values"
        android:key="language"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_set_language" />

    <PreferenceCategory android:title="@string/pref_category_radar">

        <SwitchPreference
            android:defaultValue="false"
            android:key="radar_switch"
            android:title="@string/pref_enable_radar" />
        <SeekBarPreference
            android:defaultValue="500"
            android:max="3000"
            android:title="Radius (m)"
            android:key="seek_bar_radar">
        </SeekBarPreference>

    </PreferenceCategory>


    <PreferenceCategory android:title="@string/pref_night_mode">
        <SwitchPreference
            android:defaultValue="false"
            android:key="enable_night_mode"
            android:title="@string/pref_night_mode" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_category_other">
        <Preference android:title="@string/send_location_title" android:key="send_location"/>
        <Preference android:title="@string/show_android_id" android:key="show_android_id"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_category_network">

        <EditTextPreference
            android:defaultValue="185.5.199.33:5053"
            android:key="default_get_url"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_default_get_url" />
    </PreferenceCategory>

</PreferenceScreen>
